# rs-asteroids

./: .gitignore  Cargo.toml  README.md  build-web.sh  watch.sh
app/: Cargo.toml
app/src/: lib.rs  render.rs
app/www/: index.html  main.js
asteroids/src/: lib.rs  player.rs
server/: Cargo.toml
server/src/: main.rs
