[package]
name = "app"
version = "0.1.0"
authors = ["Justin Mimbs <justin.mimbs@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.59"
asteroids = { path = "../asteroids" }
js-sys = "0.3"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

