[package]
name = "asteroids_server"
version = "0.1.0"
authors = ["Al Madireddy <al.madireddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asteroids = { path = "../asteroids" }
actix-web = "2.0"
actix-files = "0.2"
actix-rt = "1"
listenfd = "0.3"
actix = "0.9.0"
actix-web-actors = "2.0.0"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json = "0.12.4"
log = "0.4.0"
env_logger = "0.7.1"
rand="0.7.3"
chrono = { version = "0.4", features = ["serde"] }
